[package]
name = "fmt_compare_nostd"
description = "Library for comparing Display and Debug traits against &str without allocation. No_std compatible."
version = "0.1.0"
edition = "2021"
authors = ["Michal Zabielski <zabielski.michal@gmail.com>"]
license = "MIT"
repository = "https://github.com/kosciej/fmt_compare_nostd"
keywords = ["no_std", "fmt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
